tests/test2/fail/fail-transpose.m2
int main(){
	float a;
	a:transpose;
	
	return 0;
}